- - - Added shield cooldown value to Hai and Syndicate regenerators
- - - Halved shield regen for all modded shield generators
- - Added custom sounds for modded anti-missile devices
- - Reduced the EMP value of the Hai Railgun by 80%
- - Reverted damage nerf (25%) to Plasma Cannon and Plasma Turret


0.4.1 "Far'en Lai" update

Changelog:
- **Added Exiles as a faction, alongside appropriate ships, weapons, and outfits**
- Coalition implemented in the background and will be added in a later update.
- Increased energy consumption for Thermoelectric Cooler
- Nerfed the X1050 engines to make them not direct upgrades to the X1200/X1700 series
- Reduced certain Remnant ship tech costs by 5
- Added m3 versions of foci and reloader
- Fixed incorrect drones for Combat Drone and Dropship
- Reduced energy/shot for antimissile turrets by 90%

0.4.2 "Nenia" update

Changelog:
- Reduced push and pull force of Banisher and Grab-Strike by 80% and 50% respectively
- Reduced systems core count on Exile ships
- Fixed broken tech for Foci and Reloader m3
- Added slight tracking to Grab-Strike ammunition

0.4.3 "Far Monad" update

Changelog:
- Reduced push and pull forces of Banisher and Grab-Strike further
- Made Grab-Strike targetable by antimissile
- Reduced tech costs for various components across multiple factions

0.5.1 "Aki'il" update

Changelog:
- **Added Ka'het as a faction, alongside appropriate ships, weapons, and outfits**
- Reduced EC of systems cores by 20%
- Increased accuracy of thrashers
- Fixed broken Stack Core tech
- Added tech for Remnant engines
- Buffed energy storage of Chasm Battery by 10%
- Moved blaster and beam laser to Merchants
- Removed "hostile" attribute from Pirates

0.5.2 ??? update

Changelog:
- Increased blaster projectile speed by 13%
- Renamed Nest again
- Set Skein to Rare
- Doubled energy consumption and heat value for Crystal Capacitor
- Reduced inaccuracy of various weapons
- Removed multishot feature from all turrets